--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -53,38 +53,97 @@
     width: 36px;
     height: 36px;
     background: center center no-repeat;
+    position: relative;
 }
 
-.socials__item--icon--telegram .socials__link {
-    background-image: url(../../img/telegram.png);
+.socials__link:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 36px;
+    height: 36px;
+    transform: translate(-50%, -50%);
+    background: url(../../img/socials_sprites.png);
 }
 
-.socials__item--icon--telegram .socials__link:hover {
-    background-image: url(../../img/t_active.png);
+.socials__link:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 36px;
+    height: 36px;
+    transform: translate(-50%, -50%);
+    background: url(../../img/socials_sprites.png);
+    opacity: 0;
+    transition: opacity .3s;
 }
 
-.socials__item--icon--vk .socials__link {
-    background-image: url(../../img/vk.png);
+.socials__item--icon--telegram .socials__link:after {
+    background-position: -122px -66px;
 }
 
-.socials__item--icon--vk .socials__link:hover {
-    background-image: url(../../img/vk_active.png);
+.socials__item--icon--telegram .socials__link:before {
+    background-position: -122px -10px;
 }
 
-.socials__item--icon--facebook .socials__link {
-    background-image: url(../../img/f.png);
+.socials__item--icon--telegram .socials__link:hover:before {
+    opacity: 1;
 }
 
-.socials__item--icon--facebook .socials__link:hover {
-    background-image: url(../../img/f2_active.png);
+.socials__item--icon--telegram .socials__link:hover:after {
+    opacity: 0;
 }
 
-.socials__item--icon--inst .socials__link {
-    background-image: url(../../img/in.png);
+.socials__item--icon--vk .socials__link:after {
+    background-position: -10px -122px;
 }
 
-.socials__item--icon--inst .socials__link:hover {
-    background-image: url(../../img/in_active.png);
+.socials__item--icon--vk .socials__link:before {
+    background-position: -66px -122px;
+}
+
+.socials__item--icon--vk .socials__link:hover:before {
+    opacity: 1;
+}
+
+.socials__item--icon--vk .socials__link:hover:after {
+    opacity: 0;
+}
+
+.socials__item--icon--facebook .socials__link:after {
+    background-position: -10px -10px;
+}
+
+.socials__item--icon--facebook .socials__link:before {
+    background-position: -66px -10px;
+}
+
+.socials__item--icon--facebook .socials__link:hover:before {
+    opacity: 1;
+}
+
+.socials__item--icon--facebook .socials__link:hover:after {
+    opacity: 0;
+}
+
+.socials__item--icon--inst .socials__link:after {
+    background-position: -10px -66px;
+}
+
+.socials__item--icon--inst .socials__link:before {
+    background-position: -66px -66px;
+}
+
+.socials__item--icon--inst .socials__link:hover:before {
+    opacity: 1;
+}
+
+.socials__item--icon--inst .socials__link:hover:after {
+    opacity: 0;
 }
 
 .contacts__info {
