--- a/gamescss/blocks/games.css
+++ b/gamescss/blocks/games.css
@@ -100,6 +100,7 @@
     border-radius: 50%;
     font-weight: bold;
     line-height: 32px;
+    transition:  background .3s, color .3s;
 }
 
 .paginator__ref:hover {
