--- a/gamescss/blocks/partners.css
+++ b/gamescss/blocks/partners.css
@@ -28,9 +28,13 @@
     width: 250px;
     align-items: center;
     justify-content: center;
+    filter: grayscale(1);
+    transition: filter .3s;
 }
 
-
+.partners__link:hover {
+    filter: grayscale(0);
+}
 
 .partners__item {
     margin-left: 46px;
@@ -43,3 +47,8 @@
 .partners__item:nth-child(4n + 1) .partners__link {
     justify-content: flex-start;
 }
+
+
+
+
+
