--- a/gamescss/blocks/topline.css
+++ b/gamescss/blocks/topline.css
@@ -66,6 +66,7 @@
 
 .menu__ref {
     font-size: 16px;
+    transition: color .3s;
 }
 
 .contacts {
@@ -129,18 +130,29 @@
 .dropdown__menu::before {
     position: absolute;
     content: "";
-    border: 12px solid;
-    width: 0;
-    height: 0;
-    border-bottom-color: 
-    #EDEDED;
     top: -8px;
     left: 86px;
-    border-top-width: 0;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 10.5px 10px 10.5px;
+    border-color: transparent transparent #ededed transparent;
+}
+
+.dropdown__menu:after {
+    content: '';
+    position: absolute;
+    top: -20px;
+    left: 0;
+    width: 100%;
+    height: 30px;
+    display: block;
 }
 
 .contacts__workhours:hover .dropdown__menu {
-    display: block;
+    opacity: 1; 
+    right: 0; 
+    left: initial;
 }
 
 .dropdown__menu {
@@ -150,8 +162,9 @@
     padding: 15px 15px;
     width: 160px;
     top: 100%;
-    right: 0;
-    display: none;
+    left: -9999px;
+    opacity: 0;
+    transition: opacity .3s;
     border-radius: 9px;
     margin-top: 10px;
 }
