--- a/reviewscss/blocks/base.css
+++ b/reviewscss/blocks/base.css
@@ -82,6 +82,7 @@ img {
 .button--colour--violet {
     background: #8F00FF;
     color: #FFFFFF;
+    transition: color .3s, background .3s;
 }
 
 .button--colour--violet:hover {
@@ -91,6 +92,7 @@ img {
 .button--colour--black {
     background: #8E8E8E;;
     color: #FFFFFF;
+    transition: color .3s, background .3s;
 }
 
 .button--colour--black:hover {
@@ -104,6 +106,10 @@ img {
 
 
 .menu__ref:hover {
+    color: #8F00FF;
+}
+
+.menu__item--active .menu__ref {
     color: #8F00FF;
 }
 
