--- a/reviewscss/blocks/forms.css
+++ b/reviewscss/blocks/forms.css
@@ -33,6 +33,10 @@
     color: #1A1B1E;
 }
 
+.form__input:focus {
+    border: 1px solid #8F00FF;
+}
+
 .form__input:last-child {
     margin-right: 0px;
 }
@@ -43,6 +47,7 @@
 
 .form__input--textarea {
     height: 235px;
+    resize: none;
 }
 
 .form__controls {
@@ -100,7 +105,6 @@
     display: flex;
     justify-content: flex-end;
 }
-
 
 
 
