--- a/reviewscss/blocks/forms.css
+++ b/reviewscss/blocks/forms.css
@@ -31,9 +31,11 @@
     padding: 22px 30px;
     font-size: 18px;
     color: #1A1B1E;
+    border: 1px solid transparent;
 }
 
 .form__input:focus {
+    outline: 0;
     border: 1px solid #8F00FF;
 }
 
